tests/bonsai/error/lambda-no-arguments.bonsai
func foo() -> i32 {
    // Currently, lambdas with no arguments are illegal.
    L2 = || 1 + 1;

    return 0;
}
